--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 </head>
 
 <body>
-    <video width="640" height="360" controls> 
-      <source src="/skate.mp4" type="video/mp4"> 
-    </video>
+    Test
 </body>
 
 </html>
