--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    Test
+    <video width="640" height="360" controls> 
+      <source src="/skate.mp4" type="video/mp4"> 
+    </video>
 </body>
 
 </html>
