--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body style="background-color: black;">
     <video width="640" height="360" controls> 
       <source src="/skate.mp4" type="video/mp4"> 
     </video>
