Page styling tweak

--- a/skate.html
+++ b/skate.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body style="background-color: black;">
+<body style="background-color: black; padding:0px; margin:0px;">
     <video width="200" height="360" controls> 
       <source src="/skate.mp4" type="video/mp4"> 
     </video>
