--- a/skate.html
+++ b/skate.html
@@ -10,7 +10,7 @@
 </head>
 
 <body style="background-color: black; padding:0px; margin:0px;">
-    <video width="200" height="360" controls> 
+    <video poster="placeholder.jpg" width="200" height="360" controls> 
       <source src="/skate.mp4" type="video/mp4"> 
     </video>
 </body>
